--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sai S. Nudurupati"
-  avatar           : "JPG_profile_pic.JPG"
+  avatar           : "profile.JPG"
   bio              : "Scientist, Landlab Developer, Numerical Modeler, Python Programmer, Engineer, Scientific Computing Meetup Organizer"
   location         : "Seattle, Washington"
   employer         :
