--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "Portfolio"
-    url: /portfolio/
+#  - title: "Portfolio"
+#    url: /portfolio/
 
   - title: "Publications"
     url: /publications/
@@ -14,4 +14,8 @@ main:
     
   - title: "CV"
     url: /cv/
+    
+  - title: "Contact"
+    url: /contact/
+    
  
