--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
 #  - title: "Portfolio"
 #    url: /portfolio/
 
+  - title: "Research"
+    url: /research/
+
   - title: "Publications"
     url: /publications/
 
