--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-#  - title: "Portfolio"
-#    url: /portfolio/
+  - title: "Projects"
+    url: /portfolio/
 
 #  - title: "Research"
 #    url: /research/
