--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Projects"
     url: /portfolio/
 
-#  - title: "Research"
-#    url: /research/
+  - title: "Research"
+    url: /research/
 
   - title: "Publications"
     url: /publications/
